processing of terrestrial coverage data

--- a/data/notebooks/pipes_mock/intermediate.ipynb
+++ b/data/notebooks/pipes_mock/intermediate.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -372,6 +372,7 @@
      "output_type": "stream",
      "text": [
       "Processing: /home/sofia/dev/skytruth-30x30/data/data/gadm/raw/temp_preprocess/gadm_410-levels\n",
+      "Removed existing folder: /home/sofia/dev/skytruth-30x30/data/data/gadm/raw/temp_preprocess/gadm_410-levels\n",
       "Unpacked /home/sofia/dev/skytruth-30x30/data/data/gadm/raw/gadm_410-levels.zip to /home/sofia/dev/skytruth-30x30/data/data/gadm/raw/temp_preprocess/gadm_410-levels\n"
      ]
     }
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -424,87 +425,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dependency_to_parent = {\n",
-    "    \"ABW\": (\"NLD\", \"Netherlands\"),\n",
-    "    \"AIA\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"ALA\": (\"FIN\", \"Finland\"),\n",
-    "    \"ASM\": (\"USA\", \"United States\"),\n",
-    "    \"ATF\": (\"FRA\", \"France\"),\n",
-    "    \"BES\": (\"NLD\", \"Netherlands\"),\n",
-    "    \"BLM\": (\"FRA\", \"France\"),\n",
-    "    \"BMU\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"BVT\": (\"NOR\", \"Norway\"),\n",
-    "    \"CCK\": (\"AUS\", \"Australia\"),\n",
-    "    \"COK\": (\"NZL\", \"New Zealand\"),\n",
-    "    \"CUW\": (\"NLD\", \"Netherlands\"),\n",
-    "    \"CXR\": (\"AUS\", \"Australia\"),\n",
-    "    \"CYM\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"FLK\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"FRO\": (\"DNK\", \"Denmark\"),\n",
-    "    \"GGY\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"GLP\": (\"FRA\", \"France\"),\n",
-    "    \"GRL\": (\"DNK\", \"Denmark\"),\n",
-    "    \"GUF\": (\"FRA\", \"France\"),\n",
-    "    \"GUM\": (\"USA\", \"United States\"),\n",
-    "    \"HMD\": (\"AUS\", \"Australia\"),\n",
-    "    \"IMN\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"IOT\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"JEY\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"KGZ\": (\"KGZ\", \"Kyrgyzstan\"),\n",
-    "    \"LAO\": (\"LAO\", \"Laos\"),\n",
-    "    \"LIE\": (\"LIE\", \"Liechtenstein\"),\n",
-    "    \"LSO\": (\"LSO\", \"Lesotho\"),\n",
-    "    \"LUX\": (\"LUX\", \"Luxembourg\"),\n",
-    "    \"MAF\": (\"FRA\", \"France\"),\n",
-    "    \"MDA\": (\"MDA\", \"Moldova\"),\n",
-    "    \"MKD\": (\"MKD\", \"North Macedonia\"),\n",
-    "    \"MLI\": (\"MLI\", \"Mali\"),\n",
-    "    \"MNG\": (\"MNG\", \"Mongolia\"),\n",
-    "    \"MNP\": (\"USA\", \"United States\"),\n",
-    "    \"MSR\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"MTQ\": (\"FRA\", \"France\"),\n",
-    "    \"MWI\": (\"MWI\", \"Malawi\"),\n",
-    "    \"MYT\": (\"FRA\", \"France\"),\n",
-    "    \"NCL\": (\"FRA\", \"France\"),\n",
-    "    \"NER\": (\"NER\", \"Niger\"),\n",
-    "    \"NFK\": (\"AUS\", \"Australia\"),\n",
-    "    \"NIU\": (\"NZL\", \"New Zealand\"),\n",
-    "    \"NPL\": (\"NPL\", \"Nepal\"),\n",
-    "    \"PCN\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"PRI\": (\"USA\", \"United States\"),\n",
-    "    \"PRY\": (\"PRY\", \"Paraguay\"),\n",
-    "    \"PYF\": (\"FRA\", \"France\"),\n",
-    "    \"REU\": (\"FRA\", \"France\"),\n",
-    "    \"RWA\": (\"RWA\", \"Rwanda\"),\n",
-    "    \"SGS\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"SHN\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"SJM\": (\"NOR\", \"Norway\"),\n",
-    "    \"SMR\": (\"SMR\", \"San Marino\"),\n",
-    "    \"SPM\": (\"FRA\", \"France\"),\n",
-    "    \"SRB\": (\"SRB\", \"Serbia\"),\n",
-    "    \"SSD\": (\"SSD\", \"South Sudan\"),\n",
-    "    \"SVK\": (\"SVK\", \"Slovakia\"),\n",
-    "    \"SWZ\": (\"SWZ\", \"Eswatini\"),\n",
-    "    \"SXM\": (\"NLD\", \"Netherlands\"),\n",
-    "    \"TCA\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"TCD\": (\"TCD\", \"Chad\"),\n",
-    "    \"TJK\": (\"TJK\", \"Tajikistan\"),\n",
-    "    \"TKL\": (\"NZL\", \"New Zealand\"),\n",
-    "    \"UGA\": (\"UGA\", \"Uganda\"),\n",
-    "    \"UMI\": (\"USA\", \"United States\"),\n",
-    "    \"UZB\": (\"UZB\", \"Uzbekistan\"),\n",
-    "    \"VAT\": (\"VAT\", \"Vatican City\"),\n",
-    "    \"VGB\": (\"GBR\", \"United Kingdom\"),\n",
-    "    \"VIR\": (\"USA\", \"United States\"),\n",
-    "    \"WLF\": (\"FRA\", \"France\"),\n",
-    "    \"ZMB\": (\"ZMB\", \"Zambia\"),\n",
-    "    \"ZWE\": (\"ZWE\", \"Zimbabwe\"),\n",
-    "}\n",
-    "\n",
     "def update_gid_0_and_country(gdf: gpd.GeoDataFrame) -> gpd.GeoDataFrame:\n",
     "    \"\"\"\n",
     "    Updates the GID_0 and COUNTRY values in the GeoDataFrame for dependent territories \n",
@@ -516,6 +440,10 @@
     "    Returns:\n",
     "    gpd.GeoDataFrame: The GeoDataFrame with updated 'GID_0' and 'COUNTRY' values for dependent territories.\n",
     "    \"\"\"\n",
+    "    # Load the dependency_to_parent mapping\n",
+    "    with open(scripts_dir.joinpath('data_commons/data/dependency_to_parent.json'), 'r') as json_file:\n",
+    "        dependency_to_parent = json.load(json_file)\n",
+    "\n",
     "    # Map GID_0 to the updated values\n",
     "    gdf['GID_0'] = gdf['GID_0'].map(lambda x: dependency_to_parent.get(x, (x, x))[0])\n",
     "    \n",
@@ -524,52 +452,7 @@
     "\n",
     "    return gdf\n",
     "\n",
-    "# Assuming your GeoDataFrame is called `gdf`\n",
-    "gdf_updated = update_gid_0_and_country(gdf)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dissolve by country\n",
-    "gdf_updated = gdf_updated.dissolve(by='COUNTRY').reset_index()\n",
     "\n",
-    "# Calculate area\n",
-    "gdf_updated = gdf_updated.pipe(calculate_area)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download country translations\n",
-    "working_folder = FileConventionHandler(pipe)\n",
-    "input_path = working_folder.pipe_raw_path\n",
-    "input_path\n",
-    "\n",
-    "translations_csv_url = \"vizzuality_processed_data/gadm/preprocess/locations_translated.csv\"\n",
-    "translations_csv_output = input_path.joinpath(translations_csv_url.split(\"/\")[-1])\n",
-    "\n",
-    "writeReadGCP(\n",
-    "    credentials=mysettings.GCS_KEYFILE_JSON,\n",
-    "    bucket_name=mysettings.GCS_BUCKET,\n",
-    "    blob_name=translations_csv_url,\n",
-    "    file=translations_csv_output,\n",
-    "    operation=\"r\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def add_translations(df, translations_csv_path):\n",
     "    translations_df = pd.read_csv(translations_csv_path, keep_default_na=False, na_values=[])\n",
     "    \n",
@@ -580,16 +463,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Assign territories to their parent countries\n",
+    "gdf_updated = update_gid_0_and_country(gdf)\n",
+    "\n",
+    "# Dissolve by country\n",
+    "gdf_updated = gdf_updated.dissolve(by='COUNTRY').reset_index()\n",
+    "\n",
+    "# Calculate area\n",
+    "gdf_updated = gdf_updated.pipe(calculate_area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download country translations\n",
+    "working_folder = FileConventionHandler(pipe)\n",
+    "input_path = working_folder.pipe_raw_path\n",
+    "\n",
+    "translations_csv_url = \"vizzuality_processed_data/gadm/preprocess/locations_translated.csv\"\n",
+    "translations_csv_output = input_path.joinpath(translations_csv_url.split(\"/\")[-1])\n",
+    "\n",
+    "writeReadGCP(\n",
+    "    credentials=mysettings.GCS_KEYFILE_JSON,\n",
+    "    bucket_name=mysettings.GCS_BUCKET,\n",
+    "    blob_name=translations_csv_url,\n",
+    "    file=translations_csv_output,\n",
+    "    operation=\"r\",\n",
+    ")\n",
+    "\n",
     "translations_path = input_path.joinpath('locations_translated.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -633,15 +547,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Akrotiri and Dhekelia</td>\n",
-       "      <td>MULTIPOLYGON (((33.00764 34.62583, 33.00708 34...</td>\n",
-       "      <td>XAD</td>\n",
-       "      <td>233.64</td>\n",
-       "      <td>Akrotiri y Dhekelia</td>\n",
-       "      <td>Akrotiri et Dhekelia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>Albania</td>\n",
        "      <td>MULTIPOLYGON (((19.27804 40.50524, 19.28189 40...</td>\n",
        "      <td>ALB</td>\n",
@@ -650,7 +555,7 @@
        "      <td>Albanie</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>Algeria</td>\n",
        "      <td>MULTIPOLYGON (((2.84535 36.74691, 2.84597 36.7...</td>\n",
        "      <td>DZA</td>\n",
@@ -659,13 +564,22 @@
        "      <td>Algérie</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>Andorra</td>\n",
        "      <td>POLYGON ((1.61725 42.62406, 1.63334 42.62553, ...</td>\n",
        "      <td>AND</td>\n",
        "      <td>450.35</td>\n",
        "      <td>Andorra</td>\n",
        "      <td>Andorre</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>MULTIPOLYGON (((11.78636 -16.78001, 11.78478 -...</td>\n",
+       "      <td>AGO</td>\n",
+       "      <td>1251701.39</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>Angola</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -677,7 +591,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>201</th>\n",
+       "      <th>199</th>\n",
        "      <td>Vietnam</td>\n",
        "      <td>MULTIPOLYGON (((103.46895 9.25602, 103.46736 9...</td>\n",
        "      <td>VNM</td>\n",
@@ -686,7 +600,7 @@
        "      <td>Vietnam</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>202</th>\n",
+       "      <th>200</th>\n",
        "      <td>Western Sahara</td>\n",
        "      <td>MULTIPOLYGON (((-16.83569 22.15403, -16.83597 ...</td>\n",
        "      <td>ESH</td>\n",
@@ -695,7 +609,7 @@
        "      <td>Sahara occidental</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>203</th>\n",
+       "      <th>201</th>\n",
        "      <td>Yemen</td>\n",
        "      <td>MULTIPOLYGON (((42.1618 15.03042, 42.16236 15....</td>\n",
        "      <td>YEM</td>\n",
@@ -704,7 +618,7 @@
        "      <td>Yémen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>204</th>\n",
+       "      <th>202</th>\n",
        "      <td>Zambia</td>\n",
        "      <td>POLYGON ((25.87834 -17.97218, 25.87034 -17.970...</td>\n",
        "      <td>ZMB</td>\n",
@@ -713,7 +627,7 @@
        "      <td>Zambie</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>205</th>\n",
+       "      <th>203</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>POLYGON ((32.70425 -18.96022, 32.70537 -18.965...</td>\n",
        "      <td>ZWE</td>\n",
@@ -723,59 +637,60 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>206 rows × 6 columns</p>\n",
+       "<p>204 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   COUNTRY                                           geometry  \\\n",
-       "0              Afghanistan  MULTIPOLYGON (((63.61425 29.46993, 63.60868 29...   \n",
-       "1    Akrotiri and Dhekelia  MULTIPOLYGON (((33.00764 34.62583, 33.00708 34...   \n",
-       "2                  Albania  MULTIPOLYGON (((19.27804 40.50524, 19.28189 40...   \n",
-       "3                  Algeria  MULTIPOLYGON (((2.84535 36.74691, 2.84597 36.7...   \n",
-       "4                  Andorra  POLYGON ((1.61725 42.62406, 1.63334 42.62553, ...   \n",
-       "..                     ...                                                ...   \n",
-       "201                Vietnam  MULTIPOLYGON (((103.46895 9.25602, 103.46736 9...   \n",
-       "202         Western Sahara  MULTIPOLYGON (((-16.83569 22.15403, -16.83597 ...   \n",
-       "203                  Yemen  MULTIPOLYGON (((42.1618 15.03042, 42.16236 15....   \n",
-       "204                 Zambia  POLYGON ((25.87834 -17.97218, 25.87034 -17.970...   \n",
-       "205               Zimbabwe  POLYGON ((32.70425 -18.96022, 32.70537 -18.965...   \n",
+       "            COUNTRY                                           geometry GID_0  \\\n",
+       "0       Afghanistan  MULTIPOLYGON (((63.61425 29.46993, 63.60868 29...   AFG   \n",
+       "1           Albania  MULTIPOLYGON (((19.27804 40.50524, 19.28189 40...   ALB   \n",
+       "2           Algeria  MULTIPOLYGON (((2.84535 36.74691, 2.84597 36.7...   DZA   \n",
+       "3           Andorra  POLYGON ((1.61725 42.62406, 1.63334 42.62553, ...   AND   \n",
+       "4            Angola  MULTIPOLYGON (((11.78636 -16.78001, 11.78478 -...   AGO   \n",
+       "..              ...                                                ...   ...   \n",
+       "199         Vietnam  MULTIPOLYGON (((103.46895 9.25602, 103.46736 9...   VNM   \n",
+       "200  Western Sahara  MULTIPOLYGON (((-16.83569 22.15403, -16.83597 ...   ESH   \n",
+       "201           Yemen  MULTIPOLYGON (((42.1618 15.03042, 42.16236 15....   YEM   \n",
+       "202          Zambia  POLYGON ((25.87834 -17.97218, 25.87034 -17.970...   ZMB   \n",
+       "203        Zimbabwe  POLYGON ((32.70425 -18.96022, 32.70537 -18.965...   ZWE   \n",
        "\n",
-       "    GID_0    area_km2              name_es               name_fr  \n",
-       "0     AFG   644050.28           Afganistán           Afghanistan  \n",
-       "1     XAD      233.64  Akrotiri y Dhekelia  Akrotiri et Dhekelia  \n",
-       "2     ALB    28689.62              Albania               Albanie  \n",
-       "3     DZA  2311455.23              Argelia               Algérie  \n",
-       "4     AND      450.35              Andorra               Andorre  \n",
-       "..    ...         ...                  ...                   ...  \n",
-       "201   VNM   330364.87              Vietnam               Vietnam  \n",
-       "202   ESH   267892.77    Sahara Occidental     Sahara occidental  \n",
-       "203   YEM   453741.18                Yemen                 Yémen  \n",
-       "204   ZMB   753990.33               Zambia                Zambie  \n",
-       "205   ZWE   391234.88             Zimbabue              Zimbabwe  \n",
+       "       area_km2            name_es            name_fr  \n",
+       "0     644050.28         Afganistán        Afghanistan  \n",
+       "1      28689.62            Albania            Albanie  \n",
+       "2    2311455.23            Argelia            Algérie  \n",
+       "3        450.35            Andorra            Andorre  \n",
+       "4    1251701.39             Angola             Angola  \n",
+       "..          ...                ...                ...  \n",
+       "199   330364.87            Vietnam            Vietnam  \n",
+       "200   267892.77  Sahara Occidental  Sahara occidental  \n",
+       "201   453741.18              Yemen              Yémen  \n",
+       "202   753990.33             Zambia             Zambie  \n",
+       "203   391234.88           Zimbabue           Zimbabwe  \n",
        "\n",
-       "[206 rows x 6 columns]"
+       "[204 rows x 6 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Add translations for country names\n",
     "gdf_translated = add_translations(gdf_updated, translations_path).drop(columns=['code'])\n",
     "gdf_translated"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 206/206 [05:43<00:00,  1.67s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 204/204 [05:58<00:00,  1.75s/it]\n"
      ]
     }
    ],
@@ -785,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,7 +1271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mpas protected planet intermediate terrestrial"
+    "### Pas protected planet intermediate terrestrial"
    ]
   },
   {
