--- a/data/notebooks/pipes_mock/locations.ipynb
+++ b/data/notebooks/pipes_mock/locations.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +124,7 @@
        "PosixPath('/home/sofia/dev/skytruth-30x30/data/data/gadm/processed/preprocess')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,11 +146,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
+    "# # Download country translations\n",
+    "working_folder = FileConventionHandler(pipe_gadm)\n",
+    "input_path = working_folder.pipe_raw_path\n",
+    "input_path\n",
+    "\n",
+    "translations_csv_url = \"vizzuality_processed_data/gadm/preprocess/locations_translated.csv\"\n",
+    "translations_csv_output = input_path.joinpath(translations_csv_url.split(\"/\")[-1])\n",
+    "\n",
+    "# writeReadGCP(\n",
+    "#     credentials=mysettings.GCS_KEYFILE_JSON,\n",
+    "#     bucket_name=mysettings.GCS_BUCKET,\n",
+    "#     blob_name=translations_csv_url,\n",
+    "#     file=translations_csv_output,\n",
+    "#     operation=\"r\",\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Union\n",
     "import pandera as pa\n",
     "from pandera.typing import Index, Series\n",
     "import pandas as pd\n",
@@ -245,42 +284,53 @@
     "    pd.DataFrame: The DataFrame with the new combined column.\n",
     "    \"\"\"\n",
     "    df[new_col] = df[col1].combine_first(df[col2])\n",
-    "    return df\n"
+    "    return df\n",
+    "\n",
+    "def add_region_iso_2(\n",
+    "    df: pd.DataFrame | gpd.GeoDataFrame, iso_column\n",
+    ") -> pd.DataFrame | gpd.GeoDataFrame:\n",
+    "    regions = pd.read_json(scripts_dir.joinpath(\"data_commons/data/regions_data2.json\"))\n",
+    "\n",
+    "    def find_region_iso(iso: str) -> Union[str, None]:\n",
+    "        filtered_regions = list(filter(lambda x: iso in x[\"country_iso_3s\"], regions.get(\"data\")))\n",
+    "        return filtered_regions[0][\"region_iso\"] if len(filtered_regions) > 0 else None\n",
+    "\n",
+    "    return df.assign(region=lambda row: row[iso_column].apply(find_region_iso))\n",
+    "\n",
+    "def add_location_name_2(df: pd.DataFrame | gpd.GeoDataFrame) -> pd.DataFrame | gpd.GeoDataFrame:\n",
+    "    with open(scripts_dir.joinpath('data_commons/data/iso_map2.json'), 'r') as f:\n",
+    "        iso_map = json.load(f)\n",
+    "\n",
+    "    def get_name(iso):\n",
+    "        test = iso_map.get(iso, np.nan)\n",
+    "        return test\n",
+    "\n",
+    "    return df.assign(name=df.iso.apply(get_name))\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# # Download country translations\n",
-    "working_folder = FileConventionHandler(pipe_gadm)\n",
-    "input_path = working_folder.pipe_raw_path\n",
-    "input_path\n",
+    "#### Note: gadm includes some extra iso codes that had to be included in the regions_data.json (provided by protected planet) to process the terrestrial stats:\n",
     "\n",
-    "translations_csv_url = \"vizzuality_processed_data/gadm/preprocess/locations_translated.csv\"\n",
-    "translations_csv_output = input_path.joinpath(translations_csv_url.split(\"/\")[-1])\n",
+    "'XCA': Caspian Sea, included in Asia & Pacific region\n",
     "\n",
-    "# writeReadGCP(\n",
-    "#     credentials=mysettings.GCS_KEYFILE_JSON,\n",
-    "#     bucket_name=mysettings.GCS_BUCKET,\n",
-    "#     blob_name=translations_csv_url,\n",
-    "#     file=translations_csv_output,\n",
-    "#     operation=\"r\",\n",
-    "# )"
+    "'XKO': Kosovo, included in Europe region\n",
+    "\n",
+    "'ZNC': Northern Cyprus, included in Europe region"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3347624/1577571524.py:35: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "/tmp/ipykernel_3513234/673975959.py:35: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
       "  \"geometry\": gpd.GeoSeries([gpd.GeoSeries(df[\"geometry\"]).unary_union]),\n"
      ]
     }
@@ -324,11 +374,11 @@
     "    gpd.read_file(pipe_gadm_dir.get_step_fmt_file_path(prev_step, \"shp\"))\n",
     "    .rename(columns={\"GID_0\": \"iso\", 'area_km2': 'AREA_KM2'})\n",
     "    .pipe(add_envelope)\n",
-    "    .pipe(add_region_iso, 'iso')\n",
+    "    .pipe(add_region_iso_2, 'iso') # add_region_iso_2 is used instead of add_region_iso because gadm includes new iso codes\n",
     "    .pipe(calculate_gadm_area)\n",
     "    .pipe(add_bbox)\n",
     "    .pipe(add_groups_and_members_land)\n",
-    "    .pipe(add_location_name)\n",
+    "    .pipe(add_location_name_2)\n",
     "    .pipe(add_translations, translations_csv_output)\n",
     "    .rename(\n",
     "        columns={\n",
@@ -413,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
