data and layer preparation for terrestrial

--- a/data/notebooks/pipes_mock/intermediate.ipynb
+++ b/data/notebooks/pipes_mock/intermediate.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,7 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import requests\n",
+    "import json\n",
     "import dotenv  \n",
     "\n",
     "dotenv.load_dotenv()\n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -545,132 +546,19 @@
        "      <td>Afganistán</td>\n",
        "      <td>Afghanistan</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>MULTIPOLYGON (((19.27804 40.50524, 19.28189 40...</td>\n",
-       "      <td>ALB</td>\n",
-       "      <td>28689.62</td>\n",
-       "      <td>Albania</td>\n",
-       "      <td>Albanie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>MULTIPOLYGON (((2.84535 36.74691, 2.84597 36.7...</td>\n",
-       "      <td>DZA</td>\n",
-       "      <td>2311455.23</td>\n",
-       "      <td>Argelia</td>\n",
-       "      <td>Algérie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>POLYGON ((1.61725 42.62406, 1.63334 42.62553, ...</td>\n",
-       "      <td>AND</td>\n",
-       "      <td>450.35</td>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>Andorre</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>MULTIPOLYGON (((11.78636 -16.78001, 11.78478 -...</td>\n",
-       "      <td>AGO</td>\n",
-       "      <td>1251701.39</td>\n",
-       "      <td>Angola</td>\n",
-       "      <td>Angola</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>Vietnam</td>\n",
-       "      <td>MULTIPOLYGON (((103.46895 9.25602, 103.46736 9...</td>\n",
-       "      <td>VNM</td>\n",
-       "      <td>330364.87</td>\n",
-       "      <td>Vietnam</td>\n",
-       "      <td>Vietnam</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>Western Sahara</td>\n",
-       "      <td>MULTIPOLYGON (((-16.83569 22.15403, -16.83597 ...</td>\n",
-       "      <td>ESH</td>\n",
-       "      <td>267892.77</td>\n",
-       "      <td>Sahara Occidental</td>\n",
-       "      <td>Sahara occidental</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201</th>\n",
-       "      <td>Yemen</td>\n",
-       "      <td>MULTIPOLYGON (((42.1618 15.03042, 42.16236 15....</td>\n",
-       "      <td>YEM</td>\n",
-       "      <td>453741.18</td>\n",
-       "      <td>Yemen</td>\n",
-       "      <td>Yémen</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>202</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>POLYGON ((25.87834 -17.97218, 25.87034 -17.970...</td>\n",
-       "      <td>ZMB</td>\n",
-       "      <td>753990.33</td>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>Zambie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>203</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>POLYGON ((32.70425 -18.96022, 32.70537 -18.965...</td>\n",
-       "      <td>ZWE</td>\n",
-       "      <td>391234.88</td>\n",
-       "      <td>Zimbabue</td>\n",
-       "      <td>Zimbabwe</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>204 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            COUNTRY                                           geometry GID_0  \\\n",
-       "0       Afghanistan  MULTIPOLYGON (((63.61425 29.46993, 63.60868 29...   AFG   \n",
-       "1           Albania  MULTIPOLYGON (((19.27804 40.50524, 19.28189 40...   ALB   \n",
-       "2           Algeria  MULTIPOLYGON (((2.84535 36.74691, 2.84597 36.7...   DZA   \n",
-       "3           Andorra  POLYGON ((1.61725 42.62406, 1.63334 42.62553, ...   AND   \n",
-       "4            Angola  MULTIPOLYGON (((11.78636 -16.78001, 11.78478 -...   AGO   \n",
-       "..              ...                                                ...   ...   \n",
-       "199         Vietnam  MULTIPOLYGON (((103.46895 9.25602, 103.46736 9...   VNM   \n",
-       "200  Western Sahara  MULTIPOLYGON (((-16.83569 22.15403, -16.83597 ...   ESH   \n",
-       "201           Yemen  MULTIPOLYGON (((42.1618 15.03042, 42.16236 15....   YEM   \n",
-       "202          Zambia  POLYGON ((25.87834 -17.97218, 25.87034 -17.970...   ZMB   \n",
-       "203        Zimbabwe  POLYGON ((32.70425 -18.96022, 32.70537 -18.965...   ZWE   \n",
+       "       COUNTRY                                           geometry GID_0  \\\n",
+       "0  Afghanistan  MULTIPOLYGON (((63.61425 29.46993, 63.60868 29...   AFG   \n",
        "\n",
-       "       area_km2            name_es            name_fr  \n",
-       "0     644050.28         Afganistán        Afghanistan  \n",
-       "1      28689.62            Albania            Albanie  \n",
-       "2    2311455.23            Argelia            Algérie  \n",
-       "3        450.35            Andorra            Andorre  \n",
-       "4    1251701.39             Angola             Angola  \n",
-       "..          ...                ...                ...  \n",
-       "199   330364.87            Vietnam            Vietnam  \n",
-       "200   267892.77  Sahara Occidental  Sahara occidental  \n",
-       "201   453741.18              Yemen              Yémen  \n",
-       "202   753990.33             Zambia             Zambie  \n",
-       "203   391234.88           Zimbabue           Zimbabwe  \n",
-       "\n",
-       "[204 rows x 6 columns]"
+       "    area_km2     name_es      name_fr  \n",
+       "0  644050.28  Afganistán  Afghanistan  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,29 +566,29 @@
    "source": [
     "# Add translations for country names\n",
     "gdf_translated = add_translations(gdf_updated, translations_path).drop(columns=['code'])\n",
-    "gdf_translated"
+    "gdf_translated.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 204/204 [05:58<00:00,  1.75s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 204/204 [05:40<00:00,  1.67s/it]\n"
      ]
     }
    ],
    "source": [
-    "final_gadm = await simplify_async(gdf_updated)"
+    "final_gadm = await simplify_async(gdf_translated)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,177 +785,6 @@
     "# clean unzipped files\n",
     "rm_tree(temp_working_path) if temp_working_path.exists() else None\n",
     "rm_tree(output_path) if output_path.exists() else None"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Protected seas intermediate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DEPRECATED\n",
-    "force_clean = True\n",
-    "step = \"preprocess\"\n",
-    "pipe = \"protectedseas\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "working_folder = FileConventionHandler(pipe)\n",
-    "input_path = working_folder.pipe_raw_path\n",
-    "temp_working_path = working_folder.get_temp_file_path(step)\n",
-    "\n",
-    "output_path = working_folder.get_processed_step_path(step)\n",
-    "output_file = working_folder.get_step_fmt_file_path(step, \"shp\")\n",
-    "zipped_output_file = working_folder.get_step_fmt_file_path(step, \"zip\", True)\n",
-    "remote_path = working_folder.get_remote_path(step)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ps_csv_url = \"ProtectedSeas/ProtectedSeas_06142023.csv\"\n",
-    "ps_csv_output = input_path.joinpath(ps_csv_url.split(\"/\")[-1])\n",
-    "\n",
-    "ps_geometries_url = (\n",
-    "    \"ProtectedSeas/ProtectedSeas_ProtectedSeas_06142023_shp_ProtectedSeas_06142023_shp.zip\"\n",
-    ")\n",
-    "ps_geometries_output = input_path.joinpath(ps_geometries_url.split(\"/\")[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not force_clean and zipped_output_file.exists():\n",
-    "    print(f\"File {zipped_output_file} already exists\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## get the data\n",
-    "\n",
-    "writeReadGCP(\n",
-    "    credentials=mysettings.GCS_KEYFILE_JSON,\n",
-    "    bucket_name=mysettings.GCS_BUCKET,\n",
-    "    blob_name=ps_csv_url,\n",
-    "    file=ps_csv_output,\n",
-    "    operation=\"r\",\n",
-    ")\n",
-    "\n",
-    "writeReadGCP(\n",
-    "    credentials=mysettings.GCS_KEYFILE_JSON,\n",
-    "    bucket_name=mysettings.GCS_BUCKET,\n",
-    "    blob_name=ps_geometries_url,\n",
-    "    file=ps_geometries_output,\n",
-    "    operation=\"r\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# unzip shapefile\n",
-    "shutil.unpack_archive(ps_geometries_output, temp_working_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# transform data\n",
-    "# TODO: Modify the preprocessing steps so we do not eliminate the geometries that does not intersect with MPAs - do to a change in the processing methodology\n",
-    "data_table = pd.read_csv(ps_csv_output).pipe(get_mpas).pipe(set_location_iso).pipe(set_fps_classes)\n",
-    "\n",
-    "data_table.drop(\n",
-    "    columns=data_table.columns.difference(\n",
-    "        [\n",
-    "            \"site_id\",\n",
-    "            \"iso\",\n",
-    "            \"FPS_cat\",\n",
-    "            \"site_name\",\n",
-    "            \"country\",\n",
-    "            \"wdpa_id\",\n",
-    "            \"removal_of_marine_life_is_prohibited\",\n",
-    "            \"total_area\",\n",
-    "        ]\n",
-    "    ),\n",
-    "    inplace=True,\n",
-    ")\n",
-    "\n",
-    "data_table.rename(columns={\"removal_of_marine_life_is_prohibited\": \"FPS\"}, inplace=True)\n",
-    "\n",
-    "# load geoemtries & merge\n",
-    "\n",
-    "gdf = gpd.read_file(ps_geometries_output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save data\n",
-    "gdf.merge(data_table, how=\"inner\", left_on=\"SITE_ID\", right_on=\"site_id\").drop(\n",
-    "    columns=[\"SITE_ID\", \"SITE_NAME\"]\n",
-    ").to_file(filename=output_file.as_posix(), driver=\"ESRI Shapefile\", encoding=\"utf-8\")\n",
-    "\n",
-    "# zip data\n",
-    "make_archive(output_path, zipped_output_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clean unzipped files\n",
-    "rm_tree(temp_working_path) if temp_working_path.exists() else None\n",
-    "rm_tree(output_path) if output_path.exists() else None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# LOAD\n",
-    "## load zipped file to GCS\n",
-    "writeReadGCP(\n",
-    "    credentials=mysettings.GCS_KEYFILE_JSON,\n",
-    "    bucket_name=mysettings.GCS_BUCKET,\n",
-    "    blob_name=remote_path,\n",
-    "    file=zipped_output_file,\n",
-    "    operation=\"w\",\n",
-    ")"
    ]
   },
   {
