--- a/data/notebooks/pipes_mock/locations.ipynb
+++ b/data/notebooks/pipes_mock/locations.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "PosixPath('/home/sofia/dev/skytruth-30x30/data/data/gadm/processed/preprocess')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,14 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3513234/673975959.py:35: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "/tmp/ipykernel_3524857/673975959.py:35: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
       "  \"geometry\": gpd.GeoSeries([gpd.GeoSeries(df[\"geometry\"]).unary_union]),\n"
      ]
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,13 +475,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Save locations_code in data_commons/data folder\n",
     "(combined_locations[['id', 'code']].rename(columns={'id': 'location'})\n",
     " .to_csv(scripts_dir.joinpath('data_commons/data/locations_code_all.csv'), index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:google.auth.transport.requests:Making request: POST https://oauth2.googleapis.com/token\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Upload csv to bucket\n",
+    "remote_path = 'vizzuality_processed_data/strapi_tables/location_code.csv'\n",
+    "\n",
+    "writeReadGCP(\n",
+    "    credentials=mysettings.GCS_KEYFILE_JSON,\n",
+    "    bucket_name=mysettings.GCS_BUCKET,\n",
+    "    blob_name=remote_path,\n",
+    "    file=scripts_dir.joinpath('data_commons/data/locations_code_all.csv'),\n",
+    "    operation=\"w\",\n",
+    ")"
    ]
   }
  ],
