--- a/data/notebooks/pipes_mock/precalc_sofia.ipynb
+++ b/data/notebooks/pipes_mock/precalc_sofia.ipynb
@@ -399,6 +399,19 @@
     "    return calculate_stats_pa(df, gby_col, iso_column, {\"protected_area\": \"sum\", \"protected_areas_count\": \"sum\", \"1\": \"sum\", \"0\": \"sum\"})\n",
     "\n",
     "\n",
+    "def add_region_iso2(\n",
+    "    df: pd.DataFrame | gpd.GeoDataFrame, iso_column\n",
+    ") -> pd.DataFrame | gpd.GeoDataFrame:\n",
+    "    \n",
+    "    with open(scripts_dir.joinpath('data_commons/data/regions_data2.json'), 'r') as f:\n",
+    "        regions = json.load(f)\n",
+    "\n",
+    "    def find_region_iso(iso: str) -> Union[str, None]:\n",
+    "        filtered_regions = list(filter(lambda x: iso in x[\"country_iso_3s\"], regions.get(\"data\")))\n",
+    "        return filtered_regions[0][\"region_iso\"] if len(filtered_regions) > 0 else None\n",
+    "\n",
+    "    return df.assign(region=lambda row: row[iso_column].apply(find_region_iso))\n",
+    "\n",
     "\n",
     "\n",
     "class NewProtectedAreaExtentSchema(pa.DataFrameModel):\n",
@@ -3219,7 +3232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Terrestrial pas - detail table data"
+    "### Country pas - detail table data"
    ]
   },
   {
@@ -4419,7 +4432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Combine marine and terrestrial - Detail table"
+    "### Country marine and terrestrial - Detail table"
    ]
   },
   {
